# Cnet

./: .env.example  LICENSE  README.md  pyproject.toml  requirements.txt
assets/librarys/json_lib/: +10V.json  +12C.json  +12L.json  +12LF.json  +12P.json  +12V.json  +12VA.json  +15V.json  +1V0.json  +1V1.json  +1V2.json  +1V35.json  +1V5.json  +1V8.json  +24V.json  +28V.json  +2V5.json  +2V8.json  +3.3V.json  +3.3VA.json  +3.3VADC.json  +3.3VDAC.json  +3.3VP.json  +36V.json  +3V0.json  +3V3.json  +3V8.json  +48V.json  +4V.json  +5C.json  +5F.json  +5P.json  +5V.json  +5VA.json  +5VD.json  +5VL.json  +5VP.json  +6V.json  +7.5V.json  +8V.json  (+22671 more)
config/: settings.yaml
prompts/clarify_agent/: clarify_agent.txt
prompts/coder/: coder_delta_prompt.txt  coder_system_prompt.txt
prompts/critic/: critic_system_prompt.txt
prompts/fixer/: fixer_agent_patch_prompt.txt  fixer_agent_prompt.txt
prompts/scientist/: scientist_system_prompt.txt
scripts/: audit_assets.py  index_json_library.py  index_kicad_libraries.py
skidl-master/src/skidl/: __init__.py  erc.py  geometry.py  logger.py  net.py  pckg_info.py  utilities.py
skidl-master/src/skidl/schematics/: net_terminal.py  place.py  sch_node.py
src/: skidl_path.py
src/agents/clarify/: clarify.py
src/agents/coder/: assembler.py  coder_agent.py  llm_coder.py  netlist_diff.py  part_library.py  skeleton_cache.py  static_verifier.py  template_composer.py
src/agents/critic/: validator.py
src/agents/fixer/: blueprint_tools.py  fixer_agent.py
src/agents/orchestrator/: input.py  orchestrator.py
src/agents/scientist/: scientist_agent.py
src/core/: config.py  paths.py  telemetry.py
src/core/patching/: __init__.py  apply.py  policy.py  refpath.py
src/interfaces/schemas/: clarify.py  critic.py  fixer_plan.py  pipeline.py  scientist.py
(+16 files in other folders)
